<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/auth_scene">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/mediumDarkBackground"
        app:layout_constraintBottom_toTopOf="@id/layout_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:alpha="1"
        android:text="@string/login_with_an_existing_account"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/til_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/layout_login"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/iv_arrow_up_right"
        app:layout_constraintStart_toEndOf="@id/iv_arrow_up_left">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColorHint="@android:color/tertiary_text_light" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/iv_arrow_up_right"
        app:layout_constraintStart_toEndOf="@id/iv_arrow_up_left"
        app:layout_constraintTop_toBottomOf="@id/til_login_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="@android:color/tertiary_text_light" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/til_login_password"
        app:layout_constraintTop_toBottomOf="@id/til_login_password" />

    <!-- REGISTER PAGE -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/pb_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_arrow_up_left"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_arrow_up"
        app:layout_constraintBottom_toBottomOf="@id/layout_register"
        app:layout_constraintStart_toStartOf="@id/layout_register"
        app:layout_constraintTop_toTopOf="@id/layout_register"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_register_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/not_a_member_yet_nswipe_up_to_register"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrow_up_left"
        app:layout_constraintEnd_toStartOf="@id/iv_arrow_up_right"
        app:layout_constraintStart_toEndOf="@id/iv_arrow_up_left"
        app:layout_constraintTop_toTopOf="@id/iv_arrow_up_left" />

    <ImageView
        android:id="@+id/iv_arrow_up_right"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_arrow_up"
        app:layout_constraintBottom_toBottomOf="@id/layout_register"
        app:layout_constraintEnd_toEndOf="@id/layout_register"
        app:layout_constraintTop_toTopOf="@id/layout_register"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/register_a_new_account"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/tertiary_text_light" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title">

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/tertiary_text_light"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/tertiary_text_light" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/register"
        android:textColorHint="@android:color/tertiary_text_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />


</androidx.constraintlayout.motion.widget.MotionLayout>